[gd_scene load_steps=22 format=3 uid="uid://2w0343gbnmdk"]

[ext_resource type="Script" uid="uid://buuxens33w3s7" path="res://Scripts/Player.gd" id="1_fobbg"]
[ext_resource type="Texture2D" uid="uid://1i112jgjiwam" path="res://Art/Sprite/neutral_projectile.png" id="3_6t5aa"]
[ext_resource type="Script" path="res://Scripts/rig.gd" id="3_fkybt"]
[ext_resource type="PackedScene" uid="uid://cdu20anxc8cjp" path="res://Scenes/attack.tscn" id="3_h4iuc"]
[ext_resource type="Texture2D" uid="uid://do10pwbxw1h46" path="res://Art/mew/Sprite-0007-walk-2.png" id="5_8erm5"]
[ext_resource type="PackedScene" uid="uid://4qox140xfhaq" path="res://Scenes/ui.tscn" id="5_fkybt"]
[ext_resource type="Texture2D" uid="uid://t5vsh85eiptl" path="res://Art/mew/Sprite-0007-walk.png" id="6_f1ek2"]
[ext_resource type="Texture2D" uid="uid://bvlgp81mqgflr" path="res://Art/mew/Sprite-0007.png" id="7_tx1dd"]
[ext_resource type="Texture2D" uid="uid://bqwjfj5ovokal" path="res://Art/mew/Sprite-0001.png" id="8_h4iuc"]
[ext_resource type="Texture2D" uid="uid://2fkuvussknm4" path="res://Art/mew/Sprite-0002.png" id="9_fd4e3"]
[ext_resource type="Texture2D" uid="uid://pqc1idp11ci6" path="res://Art/mew/Sprite-0003.png" id="10_qqcod"]
[ext_resource type="Texture2D" uid="uid://cmsx3jgxtkp03" path="res://Art/mew/Sprite-0005.png" id="12_fs7ks"]
[ext_resource type="Texture2D" uid="uid://dpld6vtvtvh1b" path="res://Art/mew/Sprite-0006.png" id="13_l6n3p"]
[ext_resource type="Texture2D" uid="uid://dxu05hn00k5e4" path="res://Art/mew/Sprite-0004-attack.png" id="14_olqyp"]
[ext_resource type="Texture2D" uid="uid://uxcnlah4ya86" path="res://Art/mew/Sprite-idle.png" id="15_fd4e3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wxu4w"]
radius = 144.08678

[sub_resource type="Animation" id="Animation_h4iuc"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.40000004, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_h4iuc"), ExtResource("9_fd4e3"), ExtResource("10_qqcod"), ExtResource("14_olqyp"), ExtResource("10_qqcod"), ExtResource("9_fd4e3"), ExtResource("8_h4iuc")]
}

[sub_resource type="Animation" id="Animation_wpjfl"]
resource_name = "dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.2, 0.30000007, 0.40000004, 0.50000006, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("12_fs7ks"), ExtResource("13_l6n3p"), ExtResource("13_l6n3p"), ExtResource("7_tx1dd"), ExtResource("14_olqyp"), ExtResource("9_fd4e3"), ExtResource("8_h4iuc")]
}

[sub_resource type="Animation" id="Animation_pu2lt"]
resource_name = "walking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_8erm5"), ExtResource("6_f1ek2"), ExtResource("7_tx1dd"), ExtResource("5_8erm5")]
}

[sub_resource type="Animation" id="Animation_qqcod"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rig/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("8_h4iuc"), ExtResource("9_fd4e3"), ExtResource("15_fd4e3"), ExtResource("8_h4iuc")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ukyrk"]
_data = {
&"RESET": SubResource("Animation_qqcod"),
&"attack": SubResource("Animation_h4iuc"),
&"dash": SubResource("Animation_wpjfl"),
&"walking": SubResource("Animation_pu2lt")
}

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("health_bar", "DashTimer", "anchor", "marker", "attack_timer", "player_sprite", "animator") groups=["player"]]
texture_filter = 1
collision_mask = 6
script = ExtResource("1_fobbg")
health_bar = NodePath("UI/healthbar")
DashTimer = NodePath("DashTimer")
anchor = NodePath("Rig/projectileAnchor")
marker = NodePath("Rig/projectileAnchor/bulletEmplacement")
attack_timer = NodePath("AttackTimer")
player_sprite = NodePath("Rig/Sprite2D")
animator = NodePath("AnimationPlayer")

[node name="Rig" type="Node2D" parent="." node_paths=PackedStringArray("player")]
script = ExtResource("3_fkybt")
player = NodePath("..")

[node name="projectileAnchor" type="Node2D" parent="Rig"]

[node name="Attack" parent="Rig/projectileAnchor" instance=ExtResource("3_h4iuc")]
unique_name_in_owner = true
position = Vector2(219, 0)

[node name="bulletEmplacement" type="Marker2D" parent="Rig/projectileAnchor"]
position = Vector2(219, 0)

[node name="Sprite2D" type="Sprite2D" parent="Rig/projectileAnchor"]
position = Vector2(194, 0)
texture = ExtResource("3_6t5aa")

[node name="Sprite2D" type="Sprite2D" parent="Rig"]
position = Vector2(-55, -18)
scale = Vector2(6, 6)
texture = ExtResource("8_h4iuc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wxu4w")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ukyrk")
}

[node name="Camera2D2" type="Camera2D" parent="."]
scale = Vector2(3.1620297, 2.2040493)
zoom = Vector2(0.5, 0.5)
position_smoothing_enabled = true

[node name="ProgressBar" parent="." instance=ExtResource("5_fkybt")]

[node name="UI" parent="." instance=ExtResource("5_fkybt")]

[connection signal="on_pogo" from="Rig/projectileAnchor/Attack" to="." method="_on_attack_pogo"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]

[editable path="UI"]
